2007-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Made esc() and esc_raw() public
2007-08-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for PQdescribePortal()
2007-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test088.cxx:
  - Test error handling in subtransactions, thanks Bert Hubert
2007-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Solution to application link problems, thanks Peter Geoghegan
2007-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Guess float precision if no numeric_limits, thanks Denis Dzyubenko
 win32/INSTALL.txt:
  - Yet more clarificatin, thanks Peter Geoghegan
2007-08-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Convert float types with full precision, thanks Denis Dzyubenko
 win32/INSTALL.txt:
  - Don't use same libpq for debug and release, thanks Peter Geoghegan
2007-08-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Made the bit about copying config headers a bit clearer.
2007-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx, test/test043.cxx:
  - Use difference_type instead of size_type to indicate positions
2007-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Documented PGPASSWORD, thanks Andrew Maclean
  - Documented how to set environment variables, thanks Andrew Maclean
 src/tablewriter.cxx:
  - Double-escape binary data, thanks Peter Schuller
 win32/INSTALL.txt:
  - Documented how to create Windows makefiles, thanks Andrew Maclean
2007-07-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/tablewriter.cxx:
  - Fix for escaping binary data in COPY mode, thanks Peter Schuller
2007-07-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - Exported prepared_def, thanks Daniel Frey
2007-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger.hxx:
  - Fixed wrong doxygen tag
2007-06-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am: